deploy/retrieve_venta_guiada/src/objects/SapOrderResponse__e.object
<CustomObject>
    <description>All countries. Asynchronous result of the order sent to SAP through MuleSoft; consumed by the guided-selling UI via empApi with scoped subscription and channel filters (platform event governance of the sales guide).</description>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>All countries. Error detail when the SAP send fails.</description>
        <label>Mensaje de Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <description>All countries. Salesforce order the response belongs to; also the channel filter key.</description>
        <label>Id del Pedido</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapOrderNumber__c</fullName>
        <description>All countries. Order number returned by SAP on confirmation.</description>
        <label>Número de Pedido SAP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>All countries. Confirmado o error; el retorno de factura NO usa este evento (llega por actualización del pedido).</description>
        <label>Estado</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Respuesta de Pedido SAP</label>
    <pluralLabel>Respuestas de Pedido SAP</pluralLabel>
</CustomObject>